--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,18 @@
-.App {
-  text-align: center;
+.container {
+  padding-top: 2em;
 }
 
-.App-logo {
-  height: 40vmin;
+.intro {
+  font-size: 1.5em;
+  margin-bottom: 1.5em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.input-value {
+  margin-top: 1em;
+  font-size: 1.25em;
 }
 
-.App-link {
-  color: #09d3ac;
+.highlight {
+  color: #00d1b2;
+  font-weight: bold;
 }
